# fika

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md  build.rs
crates/wayland-client-runtime/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  UPSTREAM.md
crates/wayland-client-runtime/examples/: activation_smoke.rs  capabilities.rs  layer_surface_smoke.rs  pointer_capture_smoke.rs  pointer_gestures_smoke.rs  text_input_smoke.rs  toplevel_icon_smoke.rs  toplevel_smoke.rs
crates/wayland-client-runtime/src/: activation.rs  blur.rs  clipboard.rs  data_transfer.rs  dnd.rs  event.rs  fractional_scale.rs  geometry.rs  input.rs  layer_shell.rs  lib.rs  output.rs  pointer_axis.rs  pointer_constraints.rs  pointer_gestures.rs  runtime.rs  runtime_data_transfer.rs  runtime_handlers.rs  runtime_helpers.rs  runtime_tests.rs  shm_format.rs  surface.rs  text_input.rs  toplevel_icon.rs  toplevel_interaction.rs  touch.rs
crates/wayland-client-runtime/src/pointer_gestures/: event.rs  protocol.rs  subscriptions.rs
data/: README.md
docs/: ARCHIVE_REFERENCE.md  ARCHIVE_REFERENCE.zh-CN.md  ARK_REFERENCE.md  ARK_REFERENCE.zh-CN.md  BUG_ANALYSIS_BLANK_DIRECTORY.md  BUG_ANALYSIS_BLANK_DIRECTORY.zh-CN.md  BUG_ANALYSIS_SCROLLBAR_DRAG.md  BUG_ANALYSIS_SCROLLBAR_DRAG.zh-CN.md  BUS_CONTROL_REFERENCE.md  BUS_CONTROL_REFERENCE.zh-CN.md  CLIPBOARD_REFERENCE.md  CLIPBOARD_REFERENCE.zh-CN.md  CONTEXT_MENU_REFERENCE.md  CONTEXT_MENU_REFERENCE.zh-CN.md  COSMIC_REFERENCE.md  DESIGN.md  DESIGN.zh-CN.md  DEVICES_REFERENCE.md  DEVICES_REFERENCE.zh-CN.md  DOLPHIN_ITEM_SLOT_REUSE_PLAN.md  DOLPHIN_ITEM_SLOT_REUSE_PLAN.zh-CN.md  DOLPHIN_REFERENCE.md  DOLPHIN_RETAINED_RENDERER_ALIGNMENT.md  DOLPHIN_RETAINED_RENDERER_ALIGNMENT.zh-CN.md  DRAG_DROP_REFERENCE.md  DRAG_DROP_REFERENCE.zh-CN.md  FULL_RETAINED_RENDERER_ROADMAP.md  FULL_RETAINED_RENDERER_ROADMAP.zh-CN.md  GPUI_DOLPHIN_MIGRATION_PLAN.md  GPUI_DOLPHIN_MIGRATION_PLAN.zh-CN.md  ICON_THUMBNAIL_PERFORMANCE_ANALYSIS.md  ICON_THUMBNAIL_PERFORMANCE_ANALYSIS.zh-CN.md  ITEM_VIEW_CUSTOM_PAINT_DESIGN.md  ITEM_VIEW_CUSTOM_PAINT_DESIGN.zh-CN.md  ITEM_VIEW_CUSTOM_PAINT_STATUS.md  ITEM_VIEW_CUSTOM_PAINT_STATUS.zh-CN.md  ITEM_VIEW_CUSTOM_PAINT_TODO.md  ITEM_VIEW_CUSTOM_PAINT_TODO.zh-CN.md  ITEM_VIEW_RENDERER_DECISIONS.md  ITEM_VIEW_RENDERER_DECISIONS.zh-CN.md  (+44 more)
docs/examples/: fika-portals.conf
scripts/: analyze-item-view-perf.sh  analyze-places-perf.sh  analyze-wgpu-frame-log.sh  check-install-data.sh  check-item-view-perf-analyzer.sh  check-item-view-runtime-log.sh  check-places-perf-analyzer.sh  check-runtime-integration.sh  check-rust-file-lines.sh  check-wgpu-frame-log-analyzer.sh  compare-item-image-renderers.sh  dialog-lifecycle-smoke.sh  install-data.sh  run-retained-renderer-evidence.sh  summarize-item-view-renderer-evidence.sh
src/: app_actions.rs  cli.rs  core.rs  lib.rs  main.rs  platform.rs  platform_clipboard.rs  platform_event_loop.rs  platform_text_input.rs  platform_types.rs  shell.rs  ui.rs
src/app/: async_bridge.rs  chooser.rs  context_service_menu.rs  device_monitor.rs  directory_loading.rs  dnd.rs  events.rs  file_clipboard.rs  file_item_roles_updater.rs  geometry.rs  item_view.rs  item_view_metrics.rs  item_view_model.rs  item_view_perf.rs  item_view_renderer.rs  mod.rs  model_update.rs  operation_controller.rs  pane.rs  pane_controller.rs  places.rs  search_ui.rs  selection.rs  settings_save.rs  split_view.rs  state.rs  thumbnail_pipeline.rs  transfer.rs  virtual_view.rs  zoom.rs
src/app_actions/: appearance.rs  clipboard.rs  device.rs  dialog_commit.rs  drag.rs  keyboard.rs  launch.rs  navigation.rs  outcome.rs  places.rs  pointer.rs  pointer_route.rs  scroll.rs  transfer.rs  trash.rs  (+1 more)
ui/: app.slint  dialogs.slint  dnd_bridge.slint  dnd_overlay.slint  file_tile.slint  menu_geometry.slint  menu_lifecycle.slint  menus.slint  models.slint  search_panel.slint  split_pane.slint  status_bar.slint  top_bar.slint  widgets.slint
(+401 files in other folders)
