[package]
name = "fika"
edition = "2024"
license = "MIT"
publish = false
default-run = "fika"

[lib]
name = "fika_core"

[dependencies]
bytemuck = { version = "1", features = ["derive"] }
calloop = "0.14"
compio = { version = "0.19", default-features = false, features = ["fs", "io", "io-uring", "macros", "runtime"] }
cosmic-text = "0.19"
futures-lite = "2"
gio = "0.22"
gpui = { git = "ssh://git@github.com/elel-code/zed.git", rev = "d5c855b2f781998e6f063c1a821ada7f6d7190d6", package = "gpui" }
gpui_platform = { git = "ssh://git@github.com/elel-code/zed.git", rev = "d5c855b2f781998e6f063c1a821ada7f6d7190d6", package = "gpui_platform", features = ["wayland", "x11"] }
image = "0.25"
notify = "8"
pollster = "0.4"
raw-window-handle = "0.6"
resvg = "0.45"
smithay-clipboard = "0.7"
smithay-client-toolkit = "0.20"
tiny-skia = "0.11"
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt", "rt-multi-thread", "sync", "time"] }
usvg = "0.45"
wayland-client = "0.31"
wgpu = "29"
winit = { git = "https://github.com/pop-os/winit.git", tag = "cosmic-0.14" }
zbus = { version = "5", default-features = false }
zbus_polkit = { version = "5", default-features = false }
