[package]
name = "fika"
edition = "2024"
license = "MIT"
publish = false
default-run = "fika-wgpu"

[lib]
name = "fika_core"

[dependencies]
bytemuck = { version = "1", features = ["derive"] }
compio = { version = "0.19", default-features = false, features = ["fs", "io", "io-uring", "macros", "runtime"] }
cosmic-text = "0.19"
futures-lite = "2"
gio = "0.22"
image = "0.25"
notify = "8"
pollster = "0.4"
resvg = "0.45"
tiny-skia = "0.11"
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt", "rt-multi-thread", "sync", "time"] }
usvg = "0.45"
wgpu = "29"
winit = { git = "https://github.com/rust-windowing/winit.git", branch = "master" }
zbus = { version = "5", default-features = false, features = ["tokio"] }
zbus_polkit = { version = "5", default-features = false, features = ["tokio"] }
