[package]
name = "fika"
edition = "2024"
rust-version = "1.97"
license = "MIT"
publish = false
default-run = "fika"

[workspace]
members = [".", "crates/wayland-client-runtime"]
resolver = "3"

[lib]
name = "fika_core"

[dependencies]
bytemuck = { version = "1", features = ["derive"] }
compio = { version = "0.19", default-features = false, features = ["fs", "io", "io-uring", "macros", "runtime"] }
cosmic-text = "0.19"
futures-lite = "2"
gio = "0.22"
image = "0.25"
libc = "0.2"
notify = "8"
pollster = "1"
resvg = "0.47"
tiny-skia = "0.12"
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt", "rt-multi-thread", "sync", "time"] }
usvg = "0.47"
wayland-client-runtime = { path = "crates/wayland-client-runtime" }
wgpu = "30"
xkeysym = "0.2"
zbus = { version = "5", default-features = false, features = ["tokio"] }
zbus_polkit = { version = "5", default-features = false, features = ["tokio"] }
